@@ -490,7 +490,8 @@ typedef enum
     TITLEBAR_BUTTON_SUNKEN_BACKGROUND       = 0x0400,
     TITLEBAR_BUTTOM_ARROW_MIN_MAX           = 0x0800,
     TITLEBAR_BUTTOM_HIDE_ON_INACTIVE_WINDOW = 0x1000,
-    TITLEBAR_BUTTON_ICON_COLOR              = 0x2000
+    TITLEBAR_BUTTON_ICON_COLOR              = 0x2000,
+    TITLEBAR_BUTTON_USE_HOVER_COLOR         = 0x4000
 } ETitleBarButtonFlags;
 
 typedef enum
