@@ -150,7 +150,7 @@ thinnerMenuItems=false
 titlebarAlignment=center-full
 titlebarAppearance=none
 titlebarButtonAppearance=gradient
-titlebarButtons=2117
+titlebarButtons=18501
 titlebarEffect=shadow
 titlebarIcon=title
 toolbarAppearance=flat
