@@ -2,6 +2,7 @@
 -----
 1. Add option to use tiled pixmap as background for windows and menus.
 2. In preview window, draw background rings/image down from titlebar.
+3. Add option to use KDE4 palette's hove colour for kwin button symbol mouse-over.
 
 1.6.4
 -----
